# app_Machine_Learning

./: README.md  app.py  mental_health.ipynb  model.py  modelo_mental_health.joblib  pyproject.toml
